more work on xml parse tests